[gd_scene load_steps=17 format=3 uid="uid://voiovrq558iq"]

[ext_resource type="Script" path="res://scenes/levels/level_1.gd" id="1_hlxk5"]
[ext_resource type="PackedScene" uid="uid://bbrxnxd6c5bl5" path="res://assets/Immeuble V1.glb" id="1_ki607"]
[ext_resource type="PackedScene" uid="uid://cfh25yn2qxdxn" path="res://assets/Immeuble V5.glb" id="2_q168a"]
[ext_resource type="PackedScene" uid="uid://ccq223y5g2o4u" path="res://assets/Immeuble V4.glb" id="3_uk64u"]
[ext_resource type="PackedScene" uid="uid://c2pb27wmn2m22" path="res://scenes/ball.tscn" id="5_pn8jj"]
[ext_resource type="PackedScene" uid="uid://b1lsbye1cylvb" path="res://scenes/camera.tscn" id="6_oiosl"]
[ext_resource type="PackedScene" uid="uid://bx77oeigsvi4" path="res://scenes/GameUI.tscn" id="7_bpp5d"]
[ext_resource type="PackedScene" uid="uid://caalys3216wq6" path="res://scenes/DraggableManager.tscn" id="8_orfq1"]
[ext_resource type="Texture2D" uid="uid://cp2qu026yjgbe" path="res://assets/pics/z1.jpg" id="9_cncnm"]
[ext_resource type="AudioStream" uid="uid://dqcsr2oyo4lu0" path="res://assets/sfx/music_chill.mp3" id="10_i3gkh"]
[ext_resource type="PackedScene" uid="uid://davwoi23glv5y" path="res://scenes/menu/pause_menu.tscn" id="11_m7qy6"]

[sub_resource type="CylinderMesh" id="CylinderMesh_t3nan"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_513a3"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6o2sa"]

[sub_resource type="ORMMaterial3D" id="ORMMaterial3D_0b73y"]
albedo_texture = ExtResource("9_cncnm")

[sub_resource type="QuadMesh" id="QuadMesh_5odr8"]
material = SubResource("ORMMaterial3D_0b73y")

[node name="Level1" type="Node3D"]
script = ExtResource("1_hlxk5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.757872, 0.652403, 0, -0.652403, 0.757872, 0, 26.6836, 11.8052)

[node name="Roofs" type="Node3D" parent="."]

[node name="Roof1" parent="Roofs" instance=ExtResource("1_ki607")]
transform = Transform3D(-0.573576, 0, -0.819152, 0, 1, 0, 0.819152, 0, -0.573576, 0, 0, 0)

[node name="Roof2" parent="Roofs" instance=ExtResource("2_q168a")]
transform = Transform3D(-0.657743, 0, 0.753242, 0, 1, 0, -0.753242, 0, -0.657743, 5.1686, -0.727513, -8.59117)

[node name="Roof3" parent="Roofs" instance=ExtResource("2_q168a")]
transform = Transform3D(0.570699, 0, 0.821159, 0, 1, 0, -0.821159, 0, 0.570699, -2.35594, 0, -11.7157)

[node name="Roof4" parent="Roofs" instance=ExtResource("3_uk64u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.28238, 0, -23.4494)

[node name="ball" parent="." instance=ExtResource("5_pn8jj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 5)

[node name="Player" type="Node3D" parent="."]

[node name="camera" parent="Player" instance=ExtResource("6_oiosl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14788, 9.29967, 15.8241)

[node name="GameUi" parent="Player" node_paths=PackedStringArray("camera", "draggable_manager") instance=ExtResource("7_bpp5d")]
camera = NodePath("../camera")
draggable_manager = NodePath("../DraggableManager")
metadata/_edit_use_anchors_ = true

[node name="DraggableManager" parent="Player" instance=ExtResource("8_orfq1")]

[node name="Countdown" type="Timer" parent="."]
one_shot = true

[node name="TimerPlayer" type="Timer" parent="."]

[node name="FinishZone" type="Area3D" parent="."]
transform = Transform3D(0.843654, 0, 0.536887, 0, 1, 0, -0.536887, 0, 0.843654, 4.823, 4.324, -26.157)
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="FinishZone"]
mesh = SubResource("CylinderMesh_t3nan")
surface_material_override/0 = SubResource("StandardMaterial3D_513a3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinishZone"]
shape = SubResource("CylinderShape3D_6o2sa")

[node name="FinishZone2" type="Area3D" parent="."]
transform = Transform3D(0.843654, 0, 0.536887, 0, 1, 0, -0.536887, 0, 0.843654, -0.0310006, 4.324, 4.09059)
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="FinishZone2"]
mesh = SubResource("CylinderMesh_t3nan")
surface_material_override/0 = SubResource("StandardMaterial3D_513a3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="FinishZone2"]
shape = SubResource("CylinderShape3D_6o2sa")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.180176, 0, 0.983634, 0, 1, 0, -0.983634, 0, 0.180176, 6.60484, 2.71127, 0)
mesh = SubResource("QuadMesh_5odr8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_i3gkh")
autoplay = true

[node name="PauseMenu" parent="." instance=ExtResource("11_m7qy6")]
visible = false

[connection signal="selectable_model_selected" from="Player/GameUi" to="Player/DraggableManager" method="_on_game_ui_selectable_model_selected"]
[connection signal="timeout" from="Countdown" to="." method="_on_Countdown_timeout"]
[connection signal="timeout" from="TimerPlayer" to="." method="_on_timer_player_timeout"]
